仁村頭修正

--- a/html/page.html
+++ b/html/page.html
@@ -7,7 +7,7 @@
 
 <h1>これはヘッダーです</h1>
 <div>岩根 慧周です</div>
-<div>エロゲ声優推しの仁村健人です！</div>
+<div>エロゲ声優推しのホモ仁村健人です！</div>
 <p>これは段落です。ここにウェブページのコンテンツが入ります。</p>
 
 <p><a href="https://genshin.hoyoverse.com/ja">これはリンクです</a></p>
