--- a/page.html
+++ b/page.html
@@ -28,7 +28,7 @@
 
     <main>
       <div id="mainvisual">
-        <img src="img/zaemon.jpeg" alt="テキストテキストテキスト" />
+        <img src="img/sample-top.png" alt="テキストテキストテキスト" />
       </div>
 
       <section id="about" class="wrapper">
