--- a/page.html
+++ b/page.html
@@ -16,7 +16,7 @@
   <body>
     <header id="header" class="wrapper">
       <h1 class="site-title">
-        <a href="index.html"><img src="img/logo.svg" alt="Profile" /></a>
+        <a href="page.html"><img src="img/logo.svg" alt="Profile" /></a>
       </h1>
       <nav>
         <ul>
